# intervals

./: .gitignore  LICENSE  README  intervals.cabal  todo
benchmarks/: CriterionBenchmarks.lhs
src/: Intervals.lhs
test/: ArbitraryIntervals.lhs  Spec.lhs
