name:                intervals
version:             0.1.0.0
synopsis:            a temporal data intervals experiment
description:         implementations of u_minus and an extra,
                     see README.md for more info
homepage:            none
license:             BSD3
license-file:        LICENSE
author:              Jake Wheat
maintainer:          jakewheatmail@gmail.com
copyright:           Copyright 2016 Jake Wheat
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Intervals
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010
  ghc-options:         -Wall

executable intervals-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , intervals
  default-language:    Haskell2010

test-suite intervals-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.lhs
  build-depends:       base
                     , intervals
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/intervals
